--- a/gallery.html
+++ b/gallery.html
@@ -4,17 +4,20 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="wpOceans" />
-    <link
-      rel="shortcut icon"
-      type="image/png"
-      href="assets/images/favicon.png"
-    />
     <title>Rocci - Gallery</title>
-
-    <!-- CSS -->
+    <link rel="shortcut icon" href="assets/images/favicon.png" />
     <link href="assets/css/themify-icons.css" rel="stylesheet" />
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="assets/css/owl.theme.css" rel="stylesheet" />
+    <link href="assets/css/slick.css" rel="stylesheet" />
+    <link href="assets/css/slick-theme.css" rel="stylesheet" />
+    <link href="assets/css/swiper.min.css" rel="stylesheet" />
+    <link href="assets/css/nice-select.css" rel="stylesheet" />
+    <link href="assets/css/owl.transitions.css" rel="stylesheet" />
+    <link href="assets/css/jquery.fancybox.css" rel="stylesheet" />
+    <link href="assets/css/odometer-theme-default.css" rel="stylesheet" />
+    <link href="assets/css/jquery-ui.css" rel="stylesheet" />
     <link href="assets/sass/style.css" rel="stylesheet" />
 
     <style>
@@ -24,6 +27,28 @@
 
       body.modal-open .wpo-site-header {
         display: none;
+      }
+
+      .gallery-tabs {
+        text-align: center;
+        margin: 40px 0 20px;
+      }
+
+      .tab-button {
+        padding: 10px 18px;
+        border: none;
+        background: #ddd;
+        margin: 5px;
+        border-radius: 6px;
+        cursor: pointer;
+        font-weight: 500;
+        transition: background 0.3s;
+      }
+
+      .tab-button:hover,
+      .tab-button.active {
+        background: #7fc1e9;
+        color: #fff;
       }
 
       .gallery {
@@ -81,7 +106,6 @@
         background: rgba(255, 255, 255, 0.4);
       }
 
-      /* Use ti-eye icon for eye-overlay */
       .eye-overlay {
         position: absolute;
         top: 50%;
@@ -93,7 +117,7 @@
         opacity: 0;
         transition: opacity 0.3s;
         font-size: 20px;
-        color: #000;
+        color: #7fc1e9;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
         cursor: pointer;
         display: flex;
@@ -136,21 +160,19 @@
 
       .modal-content {
         position: relative;
-        background: white;
+        /* background: white; */
         padding: 0;
-        border-radius: 12px;
-        border: 4px solid white;
-        box-sizing: border-box;
+        /* border-radius: 12px; */
+        /* border: 8px solid white; */
         display: flex;
         justify-content: center;
-        align-items: center;
+        /* align-items: center; */
       }
 
       .modal-content img {
         max-width: 80vw;
         max-height: 80vh;
         object-fit: contain;
-        border-radius: 12px;
         display: block;
       }
 
@@ -203,7 +225,6 @@
         color: skyblue;
       }
 
-      /* Position left/right buttons fully visible on all screen sizes */
       @media (max-width: 700px) {
         .modal-prev,
         .modal-next {
@@ -216,6 +237,7 @@
 
   <body>
     <div class="page-wrapper">
+      <!-- Header (shortened for brevity) -->
       <header id="header">
         <div class="wpo-site-header wpo-header-style-3">
           <nav class="navigation navbar navbar-expand-lg navbar-light">
@@ -243,17 +265,23 @@
                   >
                     <button class="menu-close"><i class="ti-close"></i></button>
                     <ul class="nav navbar-nav mb-2 mb-lg-0">
-                      <li><a href="index.html">Home</a></li>
+                      <li>
+                        <a href="index.html">Home</a>
+                      </li>
+
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </div>
+                  <!-- end of nav-collapse -->
                 </div>
               </div>
             </div>
+            <!-- end of container -->
           </nav>
         </div>
       </header>
-
+      <!-- end of header -->
+      <!-- start wpo-page-title -->
       <section class="wpo-page-title">
         <div class="container">
           <div class="row">
@@ -267,70 +295,82 @@
               </div>
             </div>
           </div>
+          <!-- end row -->
         </div>
+        <!-- end container -->
       </section>
+      <!-- end page-title -->
+      <!-- Tabs -->
+      <div class="gallery-tabs">
+        <button class="tab-button active" data-year="all">All</button>
+        <button class="tab-button" data-year="2019">2019</button>
+        <button class="tab-button" data-year="2020">2020</button>
+        <button class="tab-button" data-year="2021">2021</button>
+        <button class="tab-button" data-year="2022">2022</button>
+        <button class="tab-button" data-year="2023">2023</button>
+        <button class="tab-button" data-year="2024">2024</button>
+        <button class="tab-button" data-year="2025">2025</button>
+      </div>
 
       <!-- Gallery Section -->
       <section class="gallery" id="gallery">
-        <!-- 5 Portrait -->
-        <div class="gallery-item">
-          <img src="assets/images/gallery/1.jpg" alt="Portrait 1" />
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/1.jpg" alt="Image 1" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/2.jpg" alt="Portrait 2" />
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/2.jpg" alt="Image 2" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/3.jpg" alt="Portrait 3" />
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/3.jpg" alt="Image 3" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/4.jpg" alt="Portrait 4" />
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/4.jpg" alt="Image 4" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/5.jpg" alt="Portrait 5" />
+        <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/5.jpg" alt="Image 5" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <!-- 7 Landscape -->
-        <div class="gallery-item">
-          <img src="assets/images/gallery/6.jpg" alt="Landscape 1" />
+        <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/6.jpg" alt="Image 6" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/7.jpg" alt="Landscape 2" />
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/7.jpg" alt="Image 7" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/8.jpg" alt="Landscape 3" />
+        <div class="gallery-item" data-year="2022">
+          <img src="assets/images/gallery/8.jpg" alt="Image 8" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/9.jpg" alt="Landscape 4" />
+        <div class="gallery-item" data-year="2023">
+          <img src="assets/images/gallery/9.jpg" alt="Image 9" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/10.jpg" alt="Landscape 5" />
+        <div class="gallery-item" data-year="2023">
+          <img src="assets/images/gallery/10.jpg" alt="Image 10" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/11.jpg" alt="Landscape 6" />
+        <div class="gallery-item" data-year="2024">
+          <img src="assets/images/gallery/11.jpg" alt="Image 11" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
-        <div class="gallery-item">
-          <img src="assets/images/gallery/12.jpg" alt="Landscape 7" />
+        <div class="gallery-item" data-year="2025">
+          <img src="assets/images/gallery/12.jpg" alt="Image 12" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
@@ -339,28 +379,15 @@
       <!-- Modal -->
       <div class="modal" id="modal">
         <div class="modal-content-wrapper">
-          <button
-            class="modal-prev"
-            id="modal-prev"
-            aria-label="Previous image"
-          >
-            &#10094;
-          </button>
+          <button class="modal-prev" id="modal-prev">&#10094;</button>
           <div class="modal-content">
-            <button
-              class="modal-close"
-              id="modal-close"
-              aria-label="Close modal"
-            >
-              &#10006;
-            </button>
+            <button class="modal-close" id="modal-close">&#10006;</button>
             <img id="modal-img" src="" alt="" />
           </div>
-          <button class="modal-next" id="modal-next" aria-label="Next image">
-            &#10095;
-          </button>
+          <button class="modal-next" id="modal-next">&#10095;</button>
         </div>
       </div>
+
       <footer class="wpo-site-footer-s2">
         <div class="wpo-lower-footer">
           <div class="container">
@@ -386,6 +413,14 @@
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <!-- Plugins for this template -->
+    <script src="assets/js/modernizr.custom.js"></script>
+    <script src="assets/js/jquery-plugin-collection.js"></script>
+    <!-- Custom script for this template -->
+    <script src="assets/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script>
       const modal = document.getElementById("modal");
       const modalImg = document.getElementById("modal-img");
@@ -438,6 +473,27 @@
 
       modal.addEventListener("click", (e) => {
         if (e.target === modal) closeModal();
+      });
+
+      const tabButtons = document.querySelectorAll(".tab-button");
+      const galleryItems = document.querySelectorAll(".gallery-item");
+
+      tabButtons.forEach((btn) => {
+        btn.addEventListener("click", () => {
+          tabButtons.forEach((b) => b.classList.remove("active"));
+          btn.classList.add("active");
+
+          const selectedYear = btn.getAttribute("data-year");
+
+          galleryItems.forEach((item) => {
+            const itemYear = item.getAttribute("data-year");
+            if (selectedYear === "all" || selectedYear === itemYear) {
+              item.style.display = "block";
+            } else {
+              item.style.display = "none";
+            }
+          });
+        });
       });
     </script>
   </body>
