--- a/gallery.html
+++ b/gallery.html
@@ -334,6 +334,31 @@
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/3.1.jpg" alt="Image 3.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/3.2.jpg" alt="Image 3.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/3.3.jpg" alt="Image 3.3" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/3.4.jpg" alt="Image 3.4" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/3.5.jpg" alt="Image 3.5" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
         <div class="gallery-item" data-year="2021">
           <img src="assets/images/gallery/5.jpg" alt="Image 5" />
           <div class="overlay"></div>
@@ -371,6 +396,21 @@
         </div>
         <div class="gallery-item" data-year="2025">
           <img src="assets/images/gallery/12.jpg" alt="Image 12" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/13.jpg" alt="Image 13" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/14.jpg" alt="Image 14" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/15.jpg" alt="Image 15" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
