--- a/wedguide.html
+++ b/wedguide.html
@@ -4,7 +4,40 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="wpOceans" />
+    <meta name="author" content="Faocci Layug" />
+    <meta name="title" content="You're Invited – Faocci & Rochele's Wedding" />
+    <meta
+      name="description"
+      content="Join us as we begin our forever. View the details and RSVP online."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rocci.vercel.app/" />
+    <meta
+      property="og:title"
+      content="You're Invited – Faocci & Rochele's Wedding"
+    />
+    <meta
+      property="og:description"
+      content="Join us as we begin our forever. View the details and RSVP online."
+    />
+    <meta
+      property="og:image"
+      content="https://fgol.vercel.app/portfolio/Web/Web(7).jpg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://rocci.vercel.app/" />
+    <meta
+      name="twitter:title"
+      content="You're Invited – Faocci & Rochele's Wedding"
+    />
+    <meta
+      name="twitter:description"
+      content="Join us as we begin our forever. View the details and RSVP online."
+    />
+    <meta
+      name="twitter:image"
+      content="https://fgol.vercel.app/portfolio/Web/Web(7).jpg"
+    />
     <link
       rel="shortcut icon"
       type="image/png"
