--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="You're Invited – Faocci & Rochele's Wedding" />
     <meta
       name="description"
-      content="Join us as we begin our forever. View the details and RSVP online."
+      content="You're invited to witness the beginning of our forever. Explore the details of our special day, share in our joy, and let love lead the way — RSVP online and be part of our journey."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://rocci.vercel.app/" />
@@ -18,7 +18,7 @@
     />
     <meta
       property="og:description"
-      content="Join us as we begin our forever. View the details and RSVP online."
+      content="You're invited to witness the beginning of our forever. Explore the details of our special day, share in our joy, and let love lead the way — RSVP online and be part of our journey."
     />
     <meta
       property="og:image"
@@ -32,7 +32,7 @@
     />
     <meta
       name="twitter:description"
-      content="Join us as we begin our forever. View the details and RSVP online."
+      content="You're invited to witness the beginning of our forever. Explore the details of our special day, share in our joy, and let love lead the way — RSVP online and be part of our journey."
     />
     <meta
       name="twitter:image"
