--- a/gallery.html
+++ b/gallery.html
@@ -358,6 +358,31 @@
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/2.1.jpg" alt="Image 2.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/1.2.jpg" alt="Image 1.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/1.2.1.jpg" alt="Image 1.2.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/1.3.jpg" alt="Image 1.3" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/1.4.jpg" alt="Image 1.4" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
         <div class="gallery-item" data-year="2020">
           <img src="assets/images/gallery/3.jpg" alt="Image 3" />
           <div class="overlay"></div>
@@ -365,6 +390,11 @@
         </div>
         <div class="gallery-item" data-year="2020">
           <img src="assets/images/gallery/4.jpg" alt="Image 4" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2020">
+          <img src="assets/images/gallery/4.1.jpg" alt="Image 4.1" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
@@ -445,6 +475,11 @@
         </div>
         <div class="gallery-item" data-year="2019">
           <img src="assets/images/gallery/15.jpg" alt="Image 15" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2019">
+          <img src="assets/images/gallery/15.1.jpg" alt="Image 15.1" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
