--- a/wedguide.html
+++ b/wedguide.html
@@ -438,8 +438,8 @@
                 <h2 class="year">Arrival at Reception Venue</h2>
                 <span class="month">5:00 PM</span>
                 <p>
-                  Guests are welcomed with music and refreshments as we gather
-                  to celebrate.
+                  Guests are welcomed with music, grazing table, exciting
+                  activities and refreshments as we gather to celebrate.
                 </p>
               </div>
             </div>
@@ -456,7 +456,7 @@
               </div>
               <div class="timeline-carousel__item-inner">
                 <h2 class="year">Newlyweds' Entrance</h2>
-                <span class="month">5:15 PM</span>
+                <span class="month">5:30 PM</span>
                 <p>
                   Let’s give a warm and joyful welcome to the newly married
                   couple!
@@ -476,7 +476,7 @@
               </div>
               <div class="timeline-carousel__item-inner">
                 <h2 class="year">Welcome Remarks</h2>
-                <span class="month">5:30 PM </span>
+                <span class="month">5:45 PM </span>
                 <p>Messages from beloved family and friends.</p>
               </div>
             </div>
@@ -493,7 +493,7 @@
               </div>
               <div class="timeline-carousel__item-inner">
                 <h2 class="year">Father & Bride Dance</h2>
-                <span class="month">5:45 PM </span>
+                <span class="month">6:00 PM </span>
                 <p>
                   A touching moment shared between the bride and her father.
                 </p>
@@ -512,7 +512,7 @@
               </div>
               <div class="timeline-carousel__item-inner">
                 <h2 class="year">Couple’s First Dance</h2>
-                <span class="month">5:50 PM </span>
+                <span class="month">6:10 PM </span>
                 <p>
                   The couple’s first dance as they begin their journey together.
                 </p>
@@ -531,7 +531,7 @@
               </div>
               <div class="timeline-carousel__item-inner">
                 <h2 class="year">Cake Cutting Ceremony</h2>
-                <span class="month">6:00 PM </span>
+                <span class="month">6:15 PM </span>
                 <p>A sweet symbol of shared life and love.</p>
               </div>
             </div>
@@ -548,7 +548,7 @@
               </div>
               <div class="timeline-carousel__item-inner">
                 <h2 class="year">Bouquet Toss</h2>
-                <span class="month">6:15 PM </span>
+                <span class="month">6:20 PM </span>
                 <p>Ladies, get ready — who will be the next bride-to-be?</p>
               </div>
             </div>
@@ -565,7 +565,7 @@
               </div>
               <div class="timeline-carousel__item-inner">
                 <h2 class="year">Games and Fun Activities</h2>
-                <span class="month">6:30 PM </span>
+                <span class="month">6:25PM </span>
                 <p>
                   Laughter, love, and light-hearted games for everyone to enjoy!
                 </p>
