--- a/wedguide.html
+++ b/wedguide.html
@@ -395,7 +395,7 @@
                 ></div>
               </div>
               <div class="timeline-carousel__item-inner">
-                <h2 class="year">Holy Matrimony</h2>
+                <h2 class="year">Wedding Ceremony</h2>
                 <span class="month">3:00 PM – 4:00 PM </span>
                 <p>
                   A sacred union warmly and joyfully celebrated in love and
