--- a/gallery.html
+++ b/gallery.html
@@ -429,6 +429,31 @@
           <div class="eye-overlay"><i class="ti-eye"></i></div>
         </div>
         <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/5.1.jpg" alt="Image 5.1" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/5.2.jpg" alt="Image 5.2" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/5.3.jpg" alt="Image 5.3" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/5.4.jpg" alt="Image 5.4" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2021">
+          <img src="assets/images/gallery/5.4.jpg" alt="Image 5.4" />
+          <div class="overlay"></div>
+          <div class="eye-overlay"><i class="ti-eye"></i></div>
+        </div>
+        <div class="gallery-item" data-year="2021">
           <img src="assets/images/gallery/6.jpg" alt="Image 6" />
           <div class="overlay"></div>
           <div class="eye-overlay"><i class="ti-eye"></i></div>
